feat: implement two images

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="wrapper">
         <div class="description">General</div>
-        <div class="city">Ljubljana</div>
-        <div class="city">Zagreb</div>
+        <div class="city" id="Ljubljana">Ljubljana</div>
+        <div class="city" id="Zagreb">Zagreb</div>
         <div class="city">Split</div>
         <div class="city">Sarajevo</div>
         <div class="city">Banja Luka</div>
