feat: fill out the images

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <div class="wrapper">
         <div class="description">General</div>
-        <div class="city" id="Ljubljana">Ljubljana</div>
-        <div class="city" id="Zagreb">Zagreb</div>
-        <div class="city">Split</div>
-        <div class="city">Sarajevo</div>
-        <div class="city">Banja Luka</div>
-        <div class="city">Belgrade</div>
-        <div class="city">Novi Sad</div>
-        <div class="city">Podgorica</div>
-        <div class="city">Skopje</div>
+        <div class="city" id="Ljubljana"><span>Ljubljana</span></div>
+        <div class="city" id="Zagreb"><span>Zagreb</span></div>
+        <div class="city" id="Split"><span>Split</span></div>
+        <div class="city" id="Sarajevo""><span>Sarajevo</span></div>
+        <div class="city" id="Banja_Luka"><span>Banja Luka</span></div>
+        <div class="city" id="Belgrade"><span>Belgrade</span></div>
+        <div class="city" id="Novi_Sad"><span>Novi Sad</span></div>
+        <div class="city" id="Podgorica"><span>Podgorica</span></div>
+        <div class="city" id="Skopje"><span>Skopje</span></div>
       </div>
 </body>
 </html>
