feat: start anew

--- a/index.html
+++ b/index.html
@@ -8,16 +8,11 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="description">General</div>
-        <div class="city" id="Ljubljana"><span>Ljubljana</span></div>
-        <div class="city" id="Zagreb"><span>Zagreb</span></div>
-        <div class="city" id="Split"><span>Split</span></div>
-        <div class="city" id="Sarajevo""><span>Sarajevo</span></div>
-        <div class="city" id="Banja_Luka"><span>Banja Luka</span></div>
-        <div class="city" id="Belgrade"><span>Belgrade</span></div>
-        <div class="city" id="Novi_Sad"><span>Novi Sad</span></div>
-        <div class="city" id="Podgorica"><span>Podgorica</span></div>
-        <div class="city" id="Skopje"><span>Skopje</span></div>
-      </div>
+        <div>One</div>
+        <div>Two</div>
+        <div>Third</div>
+        <div>Fourth</div>
+        <div>Fifth</div>
+    </div>
 </body>
 </html>
