feat: figure out the layout

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <div class="wrapper">
         <div>One</div>
-        <div>Two</div>
-        <div>Third</div>
-        <div>Fourth</div>
-        <div>Fifth</div>
+        <div class="short">Two</div>
+        <div class="short">Third</div>
+        <div class="short">Fourth</div>
+        <div class="short">Fifth</div>
+        <div>Sixth</div>
     </div>
 </body>
 </html>
