feat: add text, gradient overlay to images

--- a/index.html
+++ b/index.html
@@ -11,21 +11,27 @@
         <div class="wrapper">
             <div>
                 <img src="images/Avala_Tower.jpg">
+                <span>Belgrade</span>
             </div>
             <div class="short">
                 <img src="images/Saborni-hram-Hristovog-Vaskrsenja-Podgorica_fs.jpg">
+                <span>Podgorica</span>
             </div>
             <div class="short">
                 <img src="images/Ljubljana-Castle-3.jpg">
+                <span>Ljubljana</span>
             </div>
             <div class="short">
                 <img src="images/dzamija-u-sarajevu.jpg">
+                <span>Sarajevo</span>
             </div>
             <div class="short">
                 <img src="images/100f1f000001gq9j7956F.jpg">
+                <span>Skopje</span>
             </div>
             <div>
                 <img src="images/Zagreb_Cathedral_2020.jpg">
+                <span>Zagreb</span>
             </div>
         </div>
         <div class="info">
