--- a/index.html
+++ b/index.html
@@ -9,29 +9,44 @@
 <body>
     <div class="container">
         <div class="wrapper">
-            <div>
-                <img src="images/Avala_Tower.jpg">
-                <span>Belgrade</span>
+            <div class="image">
+                Image #1
             </div>
-            <div class="short">
-                <img src="images/Saborni-hram-Hristovog-Vaskrsenja-Podgorica_fs.jpg">
-                <span>Podgorica</span>
+            <div class="data">
+                Data #1
             </div>
-            <div class="short">
-                <img src="images/Ljubljana-Castle-3.jpg">
-                <span>Ljubljana</span>
+            <div class="data">
+                Data #2
             </div>
-            <div class="short">
-                <img src="images/dzamija-u-sarajevu.jpg">
-                <span>Sarajevo</span>
+            <div class="image">
+                Image #2
             </div>
-            <div class="short">
-                <img src="images/100f1f000001gq9j7956F.jpg">
-                <span>Skopje</span>
+            <div class="break">
+                Break #1
             </div>
-            <div>
-                <img src="images/Zagreb_Cathedral_2020.jpg">
-                <span>Zagreb</span>
+            <div class="break">
+                Break #2
+            </div>
+            <div class="image">
+                Image #3
+            </div>
+            <div class="data">
+                Data #3
+            </div>
+            <div class="image">
+                Image #4
+            </div>
+            <div class="image">
+                Image #5
+            </div>
+            <div class="break">
+                Break #3
+            </div>
+            <div class="break">
+                Break #4
+            </div>
+            <div class="image">
+                Image #5
             </div>
         </div>
         <div class="info">
