feat: add new images

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="container">
         <div class="wrapper">
             <div class="image">
-                Image #1
+                <img src="images/Belgrade.jpg" alt="A tower in Belgrade">
+                <span>Belgrade</span>
             </div>
             <div class="data">
                 Data #1
@@ -19,7 +20,8 @@
                 Data #2
             </div>
             <div class="image">
-                Image #2
+                <img src="images/Zagreb.jpg" alt="A cathedral in Zagreb">
+                <span>Zagreb</span>
             </div>
             <div class="break">
                 Break #1
@@ -28,16 +30,19 @@
                 Break #2
             </div>
             <div class="image">
-                Image #3
+                <img src="images/Sarajevo.png" alt="A skyscraper in Sarajevo">
+                <span>Sarajevo</span>
             </div>
             <div class="data">
                 Data #3
             </div>
             <div class="image">
-                Image #4
+                <img src="images/Ljubljana.jpg" alt="A castle in Ljubljana">
+                <span>Ljubljana</span>
             </div>
             <div class="image">
-                Image #5
+                <img src="images/Podgorica.jpg" alt="A hotel in Montenegro">
+                <span>Podgorica</span>
             </div>
             <div class="break">
                 Break #3
@@ -46,7 +51,8 @@
                 Break #4
             </div>
             <div class="image">
-                Image #5
+                <img src="images/Skopje.jpg" alt="A tower in Skopje">
+                <span>Skopje</span>
             </div>
         </div>
         <div class="info">
