feat: add charts for breaks

--- a/index.html
+++ b/index.html
@@ -24,10 +24,14 @@
                 <span>Zagreb</span>
             </div>
             <div class="break">
-                Break #1
+                <img src="images/website-1.svg" 
+                alt="A three-piece bar chart: a middle-length red bar, a short yellow bar
+                    and a long green bar">
             </div>
             <div class="break">
-                Break #2
+                <img src="images/website-2.svg" 
+                alt="A three-piece bar chart: a long red bar, a short yellow bar
+                    and a middle-length green bar">
             </div>
             <div class="image">
                 <img src="images/Sarajevo.png" alt="A skyscraper in Sarajevo">
@@ -45,10 +49,14 @@
                 <span>Podgorica</span>
             </div>
             <div class="break">
-                Break #3
+                <img src="images/website-3.svg" 
+                alt="A three-piece bar chart: a short red bar, a long yellow bar
+                    and a middle-length green bar">
             </div>
             <div class="break">
-                Break #4
+                <img src="images/website-4.svg" 
+                alt="A three-piece bar chart: a long red bar, a middle-length yellow bar
+                    and a short green bar">
             </div>
             <div class="image">
                 <img src="images/Skopje.jpg" alt="A tower in Skopje">
