feat: diversify the break charts

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <span>Zagreb</span>
             </div>
             <div class="break">
-                <img src="images/website-1.svg" 
+                <img src="images/break-chart-1.svg" 
                 alt="A three-piece bar chart: a middle-length red bar, a short yellow bar
                     and a long green bar">
             </div>
             <div class="break">
-                <img src="images/website-2.svg" 
+                <img src="images/break-chart-2.svg" 
                 alt="A three-piece bar chart: a long red bar, a short yellow bar
                     and a middle-length green bar">
             </div>
@@ -49,12 +49,12 @@
                 <span>Podgorica</span>
             </div>
             <div class="break">
-                <img src="images/website-3.svg" 
+                <img src="images/break-chart-3.svg" 
                 alt="A three-piece bar chart: a short red bar, a long yellow bar
                     and a middle-length green bar">
             </div>
             <div class="break">
-                <img src="images/website-4.svg" 
+                <img src="images/break-chart-4.svg" 
                 alt="A three-piece bar chart: a long red bar, a middle-length yellow bar
                     and a short green bar">
             </div>
@@ -69,7 +69,7 @@
                 largest travel company in the Western Balkans. 
                 Based in Novi Sad, Serbia, we 
                 provide top-notch services to tourists from all over 
-                the world. <br>Our programs cover seven countries, and 
+                the world. <br>Our programs cover six countries, and 
                 we are working hard to increase that number each year.
             </div>
         </div>
