--- a/belgrade.html
+++ b/belgrade.html
@@ -10,18 +10,7 @@
     <div class="flex-grid">
         <div class="top-panel">this is the header</div>
         <div class="main">
-            <div class="vertical-image" id="vertical-1">
-                avala
-            </div>
-            <div class="vertical-image" id="vertical-2">
-                usce
-            </div>
-            <div class="vertical-image" id="vertical-3">
-                gardos
-            </div>
-            <div class="image" id="horizontal-1">
-                kalemegdan
-            </div>
+            <img src="images/Pobednik_monument,_Kalemegdan,_Belgrade.jpg" alt="A castle in Ljubljana">
         </div>
         <div class="bottom-panel">this is the bottom part</div>
     </div>
