feat: free up space for more city pictures

--- a/belgrade.html
+++ b/belgrade.html
@@ -10,7 +10,13 @@
     <div class="flex-grid">
         <div class="top-panel">this is the header</div>
         <div class="main">
-            <img src="images/Pobednik_monument,_Kalemegdan,_Belgrade.jpg" alt="A castle in Ljubljana">
+            <div class="image">
+            <img src="images/Pobednik_monument,_Kalemegdan,_Belgrade.jpg" 
+                 alt="A castle in Ljubljana">
+            </div>
+            <div class="map">
+                
+            </div>
         </div>
         <div class="bottom-panel">this is the bottom part</div>
     </div>
