--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="wrapper">
-            <div class="image">
+            <div class="image" id="City1">
                 <img src="images/Belgrade.jpg" alt="A tower in Belgrade">
                 <span>Belgrade</span>
             </div>
@@ -19,7 +19,7 @@
             <div class="data">
                 Data #2
             </div>
-            <div class="image">
+            <div class="image" id="City2">
                 <img src="images/Zagreb.jpg" alt="A cathedral in Zagreb">
                 <span>Zagreb</span>
             </div>
@@ -33,18 +33,18 @@
                 alt="A three-piece bar chart: a long red bar, a short yellow bar
                     and a middle-length green bar">
             </div>
-            <div class="image">
+            <div class="image" id="City3">
                 <img src="images/Sarajevo.png" alt="A skyscraper in Sarajevo">
                 <span>Sarajevo</span>
             </div>
             <div class="data">
                 Data #3
             </div>
-            <div class="image">
+            <div class="image" id="City4">
                 <img src="images/Ljubljana.jpg" alt="A castle in Ljubljana">
                 <span>Ljubljana</span>
             </div>
-            <div class="image">
+            <div class="image" id="City5">
                 <img src="images/Podgorica.jpg" alt="A hotel in Montenegro">
                 <span>Podgorica</span>
             </div>
@@ -58,7 +58,7 @@
                 alt="A three-piece bar chart: a long red bar, a middle-length yellow bar
                     and a short green bar">
             </div>
-            <div class="image">
+            <div class="image" id="City6">
                 <img src="images/Skopje.jpg" alt="A tower in Skopje">
                 <span>Skopje</span>
             </div>
